syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.microservice.demo";
package employee;

service EmployeeService {
  rpc detail(EmployeeDetailRequest) returns (EmployeeDetailResponse);
}

message EmployeeDetailRequest {
  int64 id = 1;
}

message EmployeeDetailResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  int64 age = 4;
}
